--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://VitaliyYakovenko.github.io/goit-js-hw-0.8",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /parcel-project-template/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-0.8/"
   },
   "repository": {
     "type": "git",
