--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vimeo/player": "^2.25.1",
     "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
+    "shortid": "^2.2.17",
     "simplelightbox": "^2.14.3"
   },
   "devDependencies": {
